try fixing issue with content overlapping tab

--- a/src/app/feature/feature-fighter-notes/feature-fighter-notes.component.scss
+++ b/src/app/feature/feature-fighter-notes/feature-fighter-notes.component.scss
@@ -1,5 +1,5 @@
 ion-content {
-    height: 100vh;
+    height: calc(100vh - var(--offset-bottom));
 }
 
 
