--- a/src/app/feature/feature-settings/feature-settings.component.scss
+++ b/src/app/feature/feature-settings/feature-settings.component.scss
@@ -5,5 +5,5 @@
 }
 
 ion-content {
-    height: 100vh;
+    height: calc(100vh - var(--offset-bottom));
 }
